Interwiki extension: * correct alignment for RTL languages in the explication table * always align the URL as LTR

--- a/Interwiki.css
+++ b/Interwiki.css
@@ -23,3 +23,6 @@ table.mw-interwikitable.body td.mw-interwikitable-trans,
 table.mw-interwikitable.body td.mw-interwikitable-modify {
 	text-align: center;
 }
+.mw-interwikitable-url {
+	text-align: left;
+}
